# decolorizer

./: CMakeLists.txt  LICENSE  README  mac_utils.h  mac_utils.m  main.cpp  shader.glsl  shell.html  sokol_impl.c  sokol_mac_impl.m
